tests/foreign_directives_context_bad.stderr
tests/foreign_directives_context_bad.sl:4:26: error: SL1004: unexpected token
