tests/foreign_directives_context_bad.sl
struct AppContext {}

@export("helper")
pub fn helper(v i32) i32 context AppContext {
	return v
}
